move top border of fullscreen topic in parent component to avoid jump in ui

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -1,8 +1,6 @@
 div.fullscreen-topic {
   width: 100%;
   height: 100%;
-  border-top: 4px solid $oc_yellow;
-  z-index: 1036;
   overflow: auto;
 
   &.initial {
